--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>YOUR NAME</h1>
   <p>Welcome to my website!</p>
-  <img src="../Assets/Logo.jpg" />
+  <img src="Assets/Logo.jpg" />
 </body>
  
 </html>
