update index.html and homepage.js

--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
+<!DOCTYPE html>
 <html>
  
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
   <img src="Assets/Logo.jpg" />
+  <h1>Welcome BlkArthouse Team!</h1>
+  <link rel = "stylesheet" type = "text/css" href = "homepage.css" />
+  <script type = "text/javascript" src = "homepage.js"></script>
+  <div></div>
+  <a href = "http://www.blkarthouse.com" target = "_blank">BlkArthouse site</a>
+  <p>This site is designed to help us work in a fun, organized way and so our plans and actions are always aligned with the BlkArthouse mission.</p>
+  
 </body>
  
+<div class = "main">
+  <div class = "container">
+    <ul>
+      <li>Team Central</li>
+      <li>About BlkArthouse</li>
+      <li>Operations</li>
+      <li>Finance</li>
+      <li>Fundraising</li>
+      <li>Artist Community</li>
+      <li>Marketing and PR</li>
+    </ul>
+  </div>
+</div>
+
+<div class = "contact">
+  <div class = "container">
+    <h2>Questions?</h2> 
+    <p>If you have any questions that don't quite fit into any of the categories above, feel free to reach out!</p>
+    <a class = "button" href = "#">Ask away!</a>
+  </div>
+</div>
+
+<div class = "footer">
+  <div class = "container">
+    <p>&copy; BlkArthouse 2021</p>
+  </div>
+</div>
+
 </html>
