--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
  
 <body>
-  <img src="Assets/Logo.jpg" />
+  <img src="Assets/Logo.jpg"
+  >
   <h1>Welcome BlkArthouse Team!</h1>
-  <link rel = "stylesheet" type = "text/css" href = "homepage.css" />
+  <!-- <link rel = "stylesheet" type = "text/css" href = "homepage.css" /> -->
+  <link href = "style.css" rel = "stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
   <script type = "text/javascript" src = "homepage.js"></script>
   <div></div>
   <a href = "http://www.blkarthouse.com" target = "_blank">BlkArthouse site</a>
